Add snackbar and ng-container

--- a/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -24,15 +24,15 @@
             </mat-form-field>
             <!-- Error messages for email input validation -->
             <div class="error-container">
-              <div *ngIf="email?.touched && email?.errors?.['required']">
+              <ng-container *ngIf="email?.touched && email?.errors?.['required']">
                 <mat-error class="custom-error">Email is <strong>required</strong></mat-error>
-              </div>
-              <div *ngIf="email?.errors?.['pattern']">
+              </ng-container>
+              <ng-container *ngIf="email?.errors?.['pattern']">
                 <mat-error class="custom-error">Email should have a valid format</mat-error>
-              </div>
-              <div *ngIf="email?.hasError('emailNotFound')">
+              </ng-container>
+              <ng-container *ngIf="email?.hasError('emailNotFound')">
                 <mat-error>Email Not Found. Please try again.</mat-error>
-              </div>
+              </ng-container>
             </div>
             <!-- Send OTP Button -->
             <button type="submit" mat-flat-button class="w-100" color="primary" [disabled]="!forgotPasswordForm.valid">
@@ -41,7 +41,7 @@
           </form>
 
           <!-- OTP Verification Form -->
-          <div *ngIf="openOtpTemplate">
+        <ng-container *ngIf="openOtpTemplate">
             <form class="m-t-30" [formGroup]="verifyForm" (ngSubmit)="verifyOtp()">
               <!-- OTP Input -->
               <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Please Enter OTP</mat-label>
@@ -51,15 +51,15 @@
               </mat-form-field>
               <!-- Error messages for OTP input validation -->
               <div class="error-container">
-                <div *ngIf="otp?.touched && otp?.errors?.['required']">
+                <ng-container *ngIf="otp?.touched && otp?.errors?.['required']">
                   <mat-error class="custom-error">OTP is <strong>required</strong></mat-error>
-                </div>
-                <div *ngIf="otp?.hasError('invalidOtp')">
+                </ng-container>
+                <ng-container *ngIf="otp?.hasError('invalidOtp')">
                   <mat-error>Invalid OTP. Please try again.</mat-error>
-                </div>
-                <div *ngIf="otp?.hasError('otpExpired')">
+                </ng-container>
+                <ng-container *ngIf="otp?.hasError('otpExpired')">
                   <mat-error>Otp has been expired. Please try again.</mat-error>
-                </div>
+                </ng-container>
               </div>
               <!-- Verify OTP Button -->
               <button type="submit" mat-flat-button color="primary" class="w-100">
@@ -76,7 +76,7 @@
                 </div>
               </span>
             </form>
-          </div>
+          </ng-container>
 
           <!-- Sign In link -->
           <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
