--- a/src/app/pages/authentication/reset-password/reset-password.component.html
+++ b/src/app/pages/authentication/reset-password/reset-password.component.html
@@ -13,32 +13,38 @@
 
               <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">New Password</mat-label>
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="password" formControlName="newPassword"/>
-              </mat-form-field>
+                <input matInput [type]="hideNewPassword ? 'password' : 'text'" formControlName="newPassword" >
+                <button mat-icon-button matSuffix (click)="hideNewPassword = !hideNewPassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideNewPassword" type="button">
+                  <mat-icon>{{hideNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+              </mat-form-field>            
               <div class="error-container">
-                <div *ngIf="newPassword?.touched && newPassword?.errors?.['required']">
+                <ng-container *ngIf="newPassword?.touched && newPassword?.errors?.['required']">
                   <mat-error class="custom-error">
                     New Password is <strong>required</strong>
                   </mat-error>
-                </div>
-                <div *ngIf="newPassword?.errors?.['pattern']">
+                </ng-container>
+                <ng-container *ngIf="newPassword?.errors?.['pattern']">
                   <mat-error class="custom-error">
                     Password should have at least 8 characters, one special character, and one number
                   </mat-error>
-                </div>
+                </ng-container>
               </div>
 
               <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Confirm Password</mat-label>
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="password" formControlName="confirmPassword" />
-              </mat-form-field>
+                <input matInput [type]="hideConfirmPassword ? 'password' : 'text'" formControlName="confirmPassword">
+                <button mat-icon-button matSuffix (click)="hideConfirmPassword = !hideConfirmPassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideConfirmPassword" type="button">
+                  <mat-icon>{{hideConfirmPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+              </mat-form-field>     
   
               <div class="error-container">
-                <div *ngIf="confirmPassword?.touched && confirmPassword?.errors?.['required']">
+                <ng-container *ngIf="confirmPassword?.touched && confirmPassword?.errors?.['required']">
                   <mat-error class="custom-error">
                     Confirm Password is <strong>required</strong>
                   </mat-error>
-                </div>
+                </ng-container>
                 <mat-error class="custom-error" *ngIf="resetPasswordForm.hasError('passwordMismatch')">
                   Passwords do not match
                 </mat-error>
@@ -47,13 +53,10 @@
               <button type="submit" mat-flat-button color="primary" class="w-100">
                 Submit
               </button>
-                
+        
               <!-- input -->
             </form>
-
-
             <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
-  
               <a [routerLink]="['/authentication/login']" class="text-decoration-none text-primary f-w-500 f-s-14">
                 Sign In</a>
             </span>
