--- a/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
@@ -93,7 +93,7 @@
         <mat-card-title>Your Details</mat-card-title>
       </mat-card-header>
       <mat-card-content class="p-24">
-        <div *ngIf="managerDetails">
+        <ng-container *ngIf="managerDetails">
 
           <mat-card>
             <mat-card-content>
@@ -104,7 +104,7 @@
               <p><strong>Department</strong> : {{ managerDetails?.departmentName | uppercase }} </p>
             </mat-card-content>
           </mat-card>
-        </div>
+        </ng-container>
       </mat-card-content>
     </mat-card>
   </div>
