--- a/src/app/pages/manager/dialog/manager-edit/manager-edit.component.html
+++ b/src/app/pages/manager/dialog/manager-edit/manager-edit.component.html
@@ -14,16 +14,16 @@
         </mat-form-field>
         <div class="error-container">
           <!-- Display validation errors for Manager Name -->
-          <div *ngIf="managerName?.touched && managerName?.errors?.['required']">
+          <ng-container *ngIf="managerName?.touched && managerName?.errors?.['required']">
             <mat-error class="custom-error">
               Name is <strong>required</strong>
             </mat-error>
-          </div>
-          <div *ngIf="managerName?.errors?.['pattern']">
+          </ng-container>
+          <ng-container *ngIf="managerName?.errors?.['pattern']">
             <mat-error class="custom-error">
               Name should have at least 6 characters and no spaces allowed.
             </mat-error>
-          </div>
+          </ng-container>
         </div>
       </div>
       <div>
@@ -34,11 +34,11 @@
         </mat-form-field>
         <div class="error-container">
           <!-- Display validation errors for Manager Salary -->
-          <div *ngIf="managerSalary?.touched && managerSalary?.errors?.['required']">
+          <ng-container *ngIf="managerSalary?.touched && managerSalary?.errors?.['required']">
             <mat-error class="custom-error">
               Salary is <strong>required</strong>
             </mat-error>
-          </div>
+          </ng-container>
         </div>
       </div>
     </div>
@@ -52,16 +52,16 @@
         </mat-form-field>
         <div class="error-container">
           <!-- Display validation errors for Manager Age -->
-          <div *ngIf="managerAge?.touched && managerAge?.errors?.['required']">
+          <ng-container *ngIf="managerAge?.touched && managerAge?.errors?.['required']">
             <mat-error class="custom-error">
               Age is <strong>required</strong>
             </mat-error>
-          </div>
-          <div *ngIf="managerAge?.errors?.['invalidAge']">
+          </ng-container>
+          <ng-container *ngIf="managerAge?.errors?.['invalidAge']">
             <mat-error class="custom-error">
               Age should be greater than 20
             </mat-error>
-          </div>
+          </ng-container>
         </div>
       </div>
 
@@ -73,11 +73,11 @@
         </mat-form-field>
         <div class="error-container">
           <!-- Display validation errors for Manager Phone -->
-          <div *ngIf="phone?.touched && phone?.errors?.['required']">
+          <ng-container *ngIf="phone?.touched && phone?.errors?.['required']">
             <mat-error class="custom-error">
               Phone is <strong>required</strong>
             </mat-error>
-          </div>
+          </ng-container>
         </div>
       </div>
     </div>
@@ -89,11 +89,11 @@
     </mat-form-field>
     <div class="error-container">
       <!-- Display validation errors for Manager Address -->
-      <div *ngIf="address?.touched && address?.errors?.['required']">
+      <ng-container *ngIf="address?.touched && address?.errors?.['required']">
         <mat-error class="custom-error">
           Address is <strong>required</strong>
         </mat-error>
-      </div>
+      </ng-container>
     </div>
   </div>
 
