--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="blank-layout-container justify-content-center align-items-center bg-light-primary">
   <div class="position-relative row w-100 h-100 bg-gredient justify-content-center">
+    <img src="assets/images/backgrounds/login.png" alt="login" height="500px" width="400px" style="padding-top: 40px;">
     <div class="col-lg-4 d-flex align-items-center">
       <mat-card class="cardWithShadow boxed-auth">
         <mat-card-content class="p-32">
