camel case change

--- a/src/app/pages/employee/task-completed/task-completed.component.html
+++ b/src/app/pages/employee/task-completed/task-completed.component.html
@@ -68,7 +68,7 @@
                             <ng-container>
                                 <!-- Button to open a dialog or popup with task description -->
                                 <button mat-icon-button color="primary"
-                                    (click)="OpenTaskDescription(element.taskDescription)">
+                                    (click)="openTaskDescription(element.taskDescription)">
                                     <mat-icon>info</mat-icon>
                                 </button>
                             </ng-container>
