--- a/src/app/pages/employee/task-pending/task-pending.component.html
+++ b/src/app/pages/employee/task-pending/task-pending.component.html
@@ -69,7 +69,7 @@
                             <ng-container>
                                 <!-- Button to show the task description in a dialog on click -->
                                 <button mat-icon-button color="primary"
-                                    (click)="OpenTaskDescription(element.taskDescription)">
+                                    (click)="openTaskDescription(element.taskDescription)">
                                     <mat-icon>info</mat-icon>
                                 </button>
                             </ng-container>
