--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -17,7 +17,7 @@
 
                     <!-- Create button to open the "Add Department" dialog -->
                     <button mat-raised-button class="create-btn" color="primary"
-                        (click)="OpenAddDepartment()">Create</button>
+                        (click)="openAddDepartment()">Create</button>
                 </div>
             </mat-card-title>
 
@@ -41,7 +41,7 @@
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             <!-- Edit button to open the "Edit Department" dialog -->
-                            <button mat-icon-button color="primary" (click)="OpenEditDepartment(element)"
+                            <button mat-icon-button color="primary" (click)="openEditDepartment(element)"
                                 (click)="$event.stopPropagation()">
                                 <mat-icon>edit</mat-icon>
                             </button>
