--- a/src/app/pages/employee/task-ongoing/task-ongoing.component.html
+++ b/src/app/pages/employee/task-ongoing/task-ongoing.component.html
@@ -68,7 +68,7 @@
                             <ng-container>
                                 <!-- Button to open a dialog or popup with task description -->
                                 <button mat-icon-button color="primary"
-                                    (click)="OpenTaskDescription(element.taskDescription)">
+                                    (click)="openTaskDescription(element.taskDescription)">
                                     <mat-icon>info</mat-icon>
                                 </button>
                             </ng-container>
@@ -80,7 +80,7 @@
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Update Task</th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
                             <!-- Button to open a dialog or popup for updating the task -->
-                            <button mat-icon-button color="primary" (click)="OpenEditEmployeeTask(task)">
+                            <button mat-icon-button color="primary" (click)="openEditEmployeeTask(task)">
                                 <mat-icon>edit</mat-icon>
                             </button>
                         </td>
