--- a/src/app/pages/manager/manager.component.html
+++ b/src/app/pages/manager/manager.component.html
@@ -57,7 +57,7 @@
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             <!-- Display Manager's salary or an empty value if not appointed -->
                             <ng-container *ngIf="element.isAppointed; else emptyValue">
-                                {{ element.managerSalary }}
+                                {{ element.managerSalary | currency: 'INR' }}
                             </ng-container>
                         </td>
                     </ng-container>
