--- a/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
 
-    <h1>Welcome {{managerDetails?.departmentName}} Manager! </h1>
+    <h1>Welcome {{ managerName }} 🫡 ({{managerDetails?.designation}}Manager) </h1>
     <br>
     <div class="row">
 
@@ -101,7 +101,7 @@
               <p><strong>Email</strong> : {{ managerDetails?.email }} </p>
               <p><strong>Phone</strong> : {{ managerDetails?.phone }} </p>
               <p><strong>Address</strong> : {{ managerDetails?.address }} </p>
-              <p><strong>Department</strong> : {{ managerDetails?.departmentName | uppercase }} </p>
+              <p><strong>Department</strong> : {{ managerDetails?.departmentName}} </p>
             </mat-card-content>
           </mat-card>
         </ng-container>
