--- a/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-12">
-    <h1>Welcome Admin!</h1>
+    <h1>Welcome {{adminName}} 🤠 (Admin)</h1>
     <div class="row">
 
       <!-- Admin Widgets -->
