--- a/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-12">
-    <h1>Welcome {{ employeeDetails?.designation }}!</h1>
+    <h1>Welcome {{ employeeName }} 😎 ({{employeeDetails?.designation}}) </h1>
     <div class="row">
 
       <!-- Employee TaskCount Widgets -->
