--- a/src/app/pages/manager/employee-list/employee-list.component.html
+++ b/src/app/pages/manager/employee-list/employee-list.component.html
@@ -7,6 +7,7 @@
                 <!-- Title for the table -->
                 <div layout="row" layout-align="center center">
                     Employees
+                    <p style="color: grey; font-size: small;">Here is a list of the employees who report to you.</p>
                 </div>
                 <!-- Search filter input field -->
                 <div>
